Made file structure same as gradle.